WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285272
Refuse to break inside replaced content
https://bugs.webkit.org/show_bug.cgi?id=285272
Summary
Refuse to break inside replaced content
Ahmad Saleem
Reported
2024-12-31 20:26:58 PST
Hi Team, This is just merge of Blink Commit below: Blink Commit:
https://chromium-review.googlesource.com/c/chromium/src/+/1587887
It is to progress following WPT:
https://wpt.fyi/results/css/css-break/form-control.html?label=master&label=experimental&aligned&q=css%2Fcss-break%2Fform-control.html
Live Link:
http://wpt.live/css/css-break/form-control.html
Just raising so we can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-31 20:27:08 PST
<
rdar://problem/142224455
>
Ahmad Saleem
Comment 2
2024-12-31 20:34:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38445
EWS
Comment 3
2025-01-01 14:11:54 PST
Committed
288354@main
(2cee38b913b5): <
https://commits.webkit.org/288354@main
> Reviewed commits have been landed. Closing PR #38445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug